crates/sdk/tests/snapshots/function__function_schema_index.snap
---
source: crates/sdk/tests/function.rs
expression: tmp
snapshot_kind: text
---
Object(r#$surrealdb::private::sql::Object({
  "columns": Array(r#$surrealdb::private::sql::Array([
    Strand(r#$surrealdb::private::sql::Strand("name")),
  ])),
  "comment": None,
  "name": Strand(r#$surrealdb::private::sql::Strand("nameIndex")),
  "type": Strand(r#$surrealdb::private::sql::Strand("INDEX")),
}))
